@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230831"
-#define public MagickPackageReleaseDate "snapshot-20230831"
+#define public MagickPackageVersionAddendum ".020230901"
+#define public MagickPackageReleaseDate "snapshot-20230901"
