@@ -37,6 +37,20 @@
 </div>
 
 <div class="document">
+<p>2023-09-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>magick/command.c (MogrifyImage): Use MaxRGBDouble double
+constant rather than integral MaxRGB as argument to
+StringToDouble().</p></li>
+</ul>
+</blockquote>
+<p>2023-09-01  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;yandex&#46;com">JaFojtik<span>&#64;</span>yandex<span>&#46;</span>com</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>coders/bmp.c Bitmap header with size 52 bytes is also valid.</p></li>
+</ul>
+</blockquote>
 <p>2023-08-31  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
@@ -58,7 +72,7 @@ Quote: &quot;The 2-bit per pixel (2bpp) format supports 4 distinct colors and st
 </dd>
 </dl>
 <div class="system-message">
-<p class="system-message-title">System Message: WARNING/2 (<span class="docutils literal">&lt;string&gt;</span>, line 16)</p>
+<p class="system-message-title">System Message: WARNING/2 (<span class="docutils literal">&lt;string&gt;</span>, line 26)</p>
 <p>Definition list ends without a blank line; unexpected unindent.</p>
 </div>
 <p>The opacity channel handling is even more complex.</p>
